# cardano-db-sync

./: Readme.md  cabal.project  docker-compose.yml  flake.nix  stack.yaml
.github/workflows/: sync_test.yaml
cardano-db/: CHANGELOG.md  cardano-db.cabal
cardano-db-gen/: CHANGELOG.md  cardano-db-gen.cabal
cardano-db-gen/app/: cardano-db-gen.hs
cardano-db-gen/src/Cardano/: Gen.hs  Mock.hs
cardano-db-gen/src/Cardano/Mock/: Chain.hs  Generator.hs  Server.hs  Types.hs
cardano-db-gen/test/: Main.hs
cardano-db-gen/test/Test/: QSM.hs
cardano-db-gen/test/testfiles/: config.json
cardano-db-sync/: CHANGELOG.md  cardano-db-sync.cabal
cardano-db-sync-extended/: CHANGELOG.md  cardano-db-sync-extended.cabal
cardano-db-sync-extended/app/: cardano-db-sync-extended.hs
cardano-db-sync-smash/: cardano-db-sync-smash.cabal
cardano-db-sync-smash/app/: cardano-db-sync-smash.hs
cardano-db-sync-smash/src/Cardano/DbSync/Plugin/: SMASH.hs
cardano-db-sync-smash/src/Cardano/SMASH/: API.hs  DB.hs  FetchQueue.hs  HttpClient.hs  Lib.hs  Offline.hs  Types.hs
cardano-db-sync-smash/src/Cardano/SMASH/DBSync/Db/: Delete.hs  Insert.hs  Query.hs
cardano-db-sync-smash/src/Cardano/SMASH/Db/: Error.hs  Types.hs
cardano-db-sync/app/: cardano-db-sync.hs
cardano-db-sync/src/Cardano/: DbSync.hs
cardano-db-sync/src/Cardano/DbSync/: Api.hs  Database.hs  Default.hs  Era.hs  Error.hs  LedgerEvent.hs  LedgerState.hs  Metrics.hs  Rollback.hs  StateQuery.hs  Sync.hs  Types.hs  Util.hs
cardano-db-sync/src/Cardano/DbSync/Config/: Cardano.hs
cardano-db-sync/src/Cardano/DbSync/Era/: Util.hs
cardano-db-sync/src/Cardano/DbSync/Era/Byron/: Genesis.hs  Insert.hs
cardano-db-sync/src/Cardano/DbSync/Era/Shelley/: Adjust.hs  Genesis.hs  Insert.hs  Query.hs  Validate.hs  ValidateWithdrawal.hs
cardano-db-sync/src/Cardano/DbSync/Era/Shelley/Generic/: Block.hs  EpochUpdate.hs  ProtoParams.hs  Rewards.hs  StakeDist.hs  Tx.hs  Util.hs
cardano-db-sync/src/Cardano/DbSync/Era/Shelley/Insert/: Epoch.hs
cardano-db-sync/src/Cardano/DbSync/Plugin/: Default.hs  Epoch.hs
cardano-db-sync/test/: cardano-db-sync-test.hs
cardano-db-sync/test/Test/Mock/: LocalChainSync.hs  Runner.hs
cardano-db-sync/test/Test/Mock/Config/: Byron.hs
cardano-db-tool/: CHANGELOG.md  cardano-db-tool.cabal
cardano-db-tool/app/: cardano-db-tool.hs
cardano-db-tool/src/Cardano/Db/Tool/: UtxoSet.hs
cardano-db-tool/src/Cardano/Db/Tool/Validate/: Balance.hs  TotalSupply.hs  TxAccounting.hs
cardano-db/src/Cardano/Db/: Insert.hs  Query.hs  Schema.hs  Types.hs
cardano-db/src/Cardano/Db/Schema/: Orphans.hs  Types.hs
cardano-db/test/Test/IO/Cardano/Db/: Insert.hs  Rollback.hs
cardano-smash-server/: CHANGELOG.md  cardano-smash-server.cabal
cardano-smash-server/src/Cardano/SMASH/Server/: Types.hs
cardano-sync/: CHANGELOG.md  cardano-sync.cabal
cardano-sync/src/Cardano/: Sync.hs
cardano-sync/src/Cardano/Sync/: Api.hs  Database.hs  LedgerEvent.hs  LedgerState.hs  Types.hs  Util.hs
cardano-sync/src/Cardano/Sync/Era/Shelley/Generic/: Rewards.hs
config/secrets/: postgres_db
doc/: building-running.md  docker.md  schema.md  state-snapshot.md
docker/grafana/dashboards/: cardano-chain-sync-debug.json  cardano_service.json  docker_containers.json  docker_host.json  explorer-dashboard.json  postgresql-database.json  prometheus_service.json
docker/postgres/: pg_stat_statements.sh
docker/postgres-exporter/: queries.yaml
docker/prometheus/: prometheus.yml
nix/: default.nix  pkgs.nix  scripts.nix
nix/nixos/: cardano-db-sync-service.nix
schema/: migration-2-0001-20210621.sql  migration-2-0011-20210717.sql  migration-2-0017-20210812.sql  migration-3-0001-20190816.sql  shelley-schema-v2.sql  shelley-schema-v3.sql  test-schema.sh
sync-tests/: start_db_sync.sh  start_node.sh
